--- a/signup.css
+++ b/signup.css
@@ -77,7 +77,7 @@ textarea::-webkit-input-placeholder
 {
     width: calc(100% - 520px);
     position: relative;
-    background-image: url(../224-Project/img/Signup.jpg);
+    background-image: url(img/Signup.jpg);
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
